style.css
/* ... */
@media only screen and (max-width: 700px){
.hide2{
display:none;
}

nav{
	background: #000000 url(img/subtle_grunge.png) center center;
	text-align: center;
	height: 20px;
	padding: 5px 0px 4px 0px;
	-webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .5);
    box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .5);
}
nav#productnav{
	background: #000000 url(img/mochaGrunge.png) center center;
}
nav#productnav ul li a{
color: #eeeeee;
	font-size: 10px;
	-webkit-transition: color .3s ease-in-out;
	-moz-transition: color .3s ease-in-out;
	-o-transition: color .3s ease-in-out;
	-ms-transition: color .3s ease-in-out;
	transition: color .3s ease-in-out;
}
nav#productnav ul li a:hover{
	color: #46BFDF;
}
nav#productnav ul li a.active{
	color:#46BFDF;
}
#sticky_navigation_wrapper {
	height: 32px;
	display:block;
}
#sticky_navigation_wrapper nav{
	height: 30px;
}
#sticky_navigation {
	width: 100%;
	position: relative;
	z-index: 999999;
}
.navLogo {
	visibility: hidden;
	width: 75px;
}

.navLeft {
	margin-right: -75px;
}
.navRight {
	margin-left: 0px;
}

#sticky_navigation nav ul li img{
	width: 0px;
	position: absolute;
	margin-left: -28px;
	display:none;
}

.winter.see{
	clear:both;
	margin-top: 60px;
	text-align: center;
	display:none;
}
#matrix{
	display:none;
}
#top #instructions p{
	display:none;
}
nav a{
	font-family: nexabold;
	font-size: 12px;
	font-weight: 100;
	text-decoration: none;
	color: #333333;
	padding: 6px 0px 6px 0px;
	position: relative;
	z-index: 9999;
	letter-spacing: 2px;
	top: 1px;
}
#column1{
	float:none;
	margin: 0 auto;
	width: 100%;
}
#column2{
	float:none;
	margin: 0 auto;
	width: 100%;
}

}
@media only screen and (max-width: 600px){
	nav a{
	font-family: nexabold;
	font-size: 12px;
	font-weight: 100;
	text-decoration: none;
	color: #333333;
	padding: 6px 10px 6px 10px;
	position: relative;
	z-index: 9999;
	letter-spacing: 2px;
	top: 1px;
}
nav ul li{
	display:inline-block;
	/*margin-top: 5px;*/
	margin:5px 0px 0px 0px;
}
#contact1{
	display:inline-block;
}
#contact2{
	display:inline-block;
}
}

@media only screen and (max-width: 400px){
nav a{
	font-family: nexalight;
	font-size: 12px;
	font-weight: 100;
	text-decoration: none;
	color: #333333;
	padding: 6px 10px 6px 10px;
	position: relative;
	z-index: 9999;
	letter-spacing: 2px;
	top: 1px;
}
#logo{
	width: 50%;
}
#tagline{
	font-size: 10px;
}
#instructions{
	padding: 0px;
}
#home .content{
	padding-top: 0px;
	padding-bottom: 50px;
}

}

